--- a/TSSNominaSystem/appsettings.json
+++ b/TSSNominaSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-BP0NJS2\\SQLEXPRESS;Database=TSSNomina;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=;Database=TSSNomina;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
